crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum PamojaSx126xChipMode PamojaSx126xChipMode;
typedef uint8_t PamojaSx126xChipMode;
typedef enum PamojaSx126xCommandStatus PamojaSx126xCommandStatus;
typedef uint8_t PamojaSx126xCommandStatus;
typedef struct PamojaRadioDutyCycle PamojaRadioDutyCycle;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  int32_t transmit_power_centi_dbm;
  int32_t transmit_antenna_gain_centi_dbi;
  int32_t transmit_cable_loss_centi_db;
  int32_t receive_antenna_gain_centi_dbi;
  int32_t receive_cable_loss_centi_db;
  int32_t noise_figure_centi_db;
} PamojaLoraLinkBudget;
typedef struct {
  uint8_t pa_duty_cycle;
  uint8_t hp_max;
  uint8_t device_sel;
  uint8_t pa_lut;
  int8_t setting_dbm;
} PamojaSx126xTxPower;
typedef struct {
  uint8_t bytes[PAMOJA_SX126X_COMMAND_MAX];
  uint8_t len;
} PamojaSx126xCommand;
typedef struct {
  PamojaSx126xCommand command;
  uint32_t answer_len;
} PamojaSx126xQuery;
typedef struct {
  PamojaSx126xChipMode chip_mode;
  PamojaSx126xCommandStatus command_status;
  bool error;
} PamojaSx126xStatus;
typedef struct {
  int32_t rssi_centi_dbm;
  int32_t snr_centi_db;
  int32_t signal_rssi_centi_dbm;
} PamojaSx126xPacketStatus;
typedef struct {
  uint8_t payload_len;
  uint8_t start;
} PamojaSx126xRxBufferStatus;
uint32_t pamoja_sx126x_frequency_word(uint32_t frequency_hz);
uint32_t pamoja_sx126x_timeout_steps(uint64_t timeout_us);
uint16_t pamoja_sx126x_image_calibration(uint32_t low_hz, uint32_t high_hz);
uint32_t pamoja_sx126x_ramp_time_us(uint32_t at_least_us);
PamojaSx126xTxPower pamoja_sx126x_tx_power_for_output(bool high_power, int8_t output_dbm);
PamojaSx126xTxPower pamoja_sx126x_tx_power_under_ceiling(bool high_power,
                                                         PamojaLoraLinkBudget budget,
                                                         int32_t eirp_ceiling_centi_dbm);
PamojaSx126xCommand pamoja_sx126x_set_standby(void);
PamojaSx126xCommand pamoja_sx126x_set_packet_type_lora(void);
PamojaSx126xCommand pamoja_sx126x_set_rf_frequency(uint32_t frequency_hz);
PamojaSx126xCommand pamoja_sx126x_calibrate_image(uint32_t low_hz, uint32_t high_hz);
PamojaSx126xCommand pamoja_sx126x_set_pa_config(PamojaSx126xTxPower power);
PamojaSx126xCommand pamoja_sx126x_set_tx_params(PamojaSx126xTxPower power, uint32_t ramp_us);
PamojaStatus pamoja_sx126x_set_lora_modulation_params(PamojaLoraLink link,
                                                      PamojaSx126xCommand *out_command);
PamojaSx126xCommand pamoja_sx126x_set_lora_packet_params(PamojaLoraLink link,
                                                         uint8_t payload_len,
                                                         bool invert_iq);
PamojaSx126xCommand pamoja_sx126x_set_dio_irq_params(uint16_t irq,
                                                     uint16_t dio1,
                                                     uint16_t dio2,
                                                     uint16_t dio3);
PamojaSx126xCommand pamoja_sx126x_clear_irq_status(uint16_t irq);
PamojaSx126xCommand pamoja_sx126x_set_tx(uint64_t timeout_us);
PamojaSx126xCommand pamoja_sx126x_set_rx(uint64_t timeout_us);
PamojaSx126xCommand pamoja_sx126x_set_rx_continuous(void);
PamojaSx126xCommand pamoja_sx126x_set_sleep(bool warm_start);
PamojaSx126xCommand pamoja_sx126x_write_register_header(uint16_t address);
PamojaSx126xCommand pamoja_sx126x_write_buffer_header(uint8_t offset);
PamojaSx126xQuery pamoja_sx126x_get_status(void);
PamojaSx126xQuery pamoja_sx126x_get_irq_status(void);
PamojaSx126xQuery pamoja_sx126x_get_rx_buffer_status(void);
PamojaSx126xQuery pamoja_sx126x_get_packet_status(void);
PamojaSx126xQuery pamoja_sx126x_get_rssi_inst(void);
PamojaSx126xQuery pamoja_sx126x_get_device_errors(void);
PamojaSx126xQuery pamoja_sx126x_read_register(uint16_t address, uint8_t len);
PamojaSx126xQuery pamoja_sx126x_read_buffer(uint8_t offset, uint8_t len);
PamojaSx126xStatus pamoja_sx126x_status_from_byte(uint8_t byte);
uint16_t pamoja_sx126x_irq_from_bytes(uint8_t high, uint8_t low);
uint16_t pamoja_sx126x_device_errors_from_bytes(uint8_t high, uint8_t low);
PamojaSx126xPacketStatus pamoja_sx126x_packet_status_from_bytes(uint8_t rssi_pkt,
                                                                uint8_t snr_pkt,
                                                                uint8_t signal_rssi_pkt);
PamojaSx126xRxBufferStatus pamoja_sx126x_rx_buffer_status_from_bytes(uint8_t payload_len,
                                                                     uint8_t start);
int32_t pamoja_sx126x_rssi_inst_centi_dbm(uint8_t byte);
PamojaRadioDutyCycle *pamoja_radio_duty_cycle_new(uint32_t permille);